[package]
name = "r-liv"
version = "0.1.0"
edition = "2021"
authors = ["3top1a<3top1a.official@gmail.com>"]
categories = ["image-viewer", "viewer", "image"]
repository = "https://github.com/3top1a/r-liv"
license-file = "LICENSE"

[profile.release]
lto = true 
codegen-units = 1
opt-level = "z"   
panic = 'abort'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

glium = "0.29.0"
imgui = "0.7.0"
imgui-glium-renderer = "0.7.0"
image = "0.24.1"
