[package]
name = "r-liv"
version = "0.2.0"
edition = "2021"
authors = ["3top1a<3top1a.official@gmail.com>"]
categories = ["image-viewer", "viewer", "image"]
repository = "https://github.com/3top1a/r-liv"
license-file = "LICENSE"
build = "src/build.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
lto = true 
codegen-units = 1
opt-level = "z"
panic = 'abort'

[package.metadata.winres]
OriginalFilename = "r-liv.exe"
LegalCopyright = "Copyright 3top1a © 2022"
ProductName = "R-liv"
FileDescription = "Rust Lean Image Viewer - Fast and configurable image viewer inspired by JPEGView by David Kleiner"

[dependencies]

glium = "0.29.0"
imgui = "0.7.0"
imgui-glium-renderer = "0.7.0"
image = "0.24.1"
cgmath = "0.18.0"
